// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create and delete quotes 1`] = `
<div>
  <h3>
    Quotes 
    2
  </h3>
  <table
    className="table"
  >
    <tbody>
      <tr>
        <td>
          <input
            className="job-title-fld"
            onChange={[Function]}
            value="J1"
          />
          <button
            className="create-quote-btn"
            onClick={[Function]}
          >
            Add
          </button>
          <button
            className="update-quote-btn"
          >
            Update
          </button>
        </td>
      </tr>
      <tr
        className="quote-row"
      >
        <td
          className="job-title"
        >
          J1
        </td>
        <td>
          <button
            className="delete-quote-btn"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="select-quote-btn"
            onClick={[Function]}
          >
            Select
          </button>
        </td>
      </tr>
      <tr
        className="quote-row"
      >
        <td
          className="job-title"
        >
          J2
        </td>
        <td>
          <button
            className="delete-quote-btn"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="select-quote-btn"
            onClick={[Function]}
          >
            Select
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`create and delete quotes 2`] = `
<div>
  <h3>
    Quotes 
    2
  </h3>
  <table
    className="table"
  >
    <tbody>
      <tr>
        <td>
          <input
            className="job-title-fld"
            onChange={[Function]}
            value="J1"
          />
          <button
            className="create-quote-btn"
            onClick={[Function]}
          >
            Add
          </button>
          <button
            className="update-quote-btn"
          >
            Update
          </button>
        </td>
      </tr>
      <tr
        className="quote-row"
      >
        <td
          className="job-title"
        >
          J1
        </td>
        <td>
          <button
            className="delete-quote-btn"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="select-quote-btn"
            onClick={[Function]}
          >
            Select
          </button>
        </td>
      </tr>
      <tr
        className="quote-row"
      >
        <td
          className="job-title"
        >
          J2
        </td>
        <td>
          <button
            className="delete-quote-btn"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="select-quote-btn"
            onClick={[Function]}
          >
            Select
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`create and delete quotes 3`] = `
<div>
  <h3>
    Quotes 
    2
  </h3>
  <table
    className="table"
  >
    <tbody>
      <tr>
        <td>
          <input
            className="job-title-fld"
            onChange={[Function]}
            value="J1"
          />
          <button
            className="create-quote-btn"
            onClick={[Function]}
          >
            Add
          </button>
          <button
            className="update-quote-btn"
          >
            Update
          </button>
        </td>
      </tr>
      <tr
        className="quote-row"
      >
        <td
          className="job-title"
        >
          J1
        </td>
        <td>
          <button
            className="delete-quote-btn"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="select-quote-btn"
            onClick={[Function]}
          >
            Select
          </button>
        </td>
      </tr>
      <tr
        className="quote-row"
      >
        <td
          className="job-title"
        >
          J2
        </td>
        <td>
          <button
            className="delete-quote-btn"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="select-quote-btn"
            onClick={[Function]}
          >
            Select
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`create and delete quotes 4`] = `
<div>
  <h3>
    Quotes 
    2
  </h3>
  <table
    className="table"
  >
    <tbody>
      <tr>
        <td>
          <input
            className="job-title-fld"
            onChange={[Function]}
            value="J1"
          />
          <button
            className="create-quote-btn"
            onClick={[Function]}
          >
            Add
          </button>
          <button
            className="update-quote-btn"
          >
            Update
          </button>
        </td>
      </tr>
      <tr
        className="quote-row"
      >
        <td
          className="job-title"
        >
          J1
        </td>
        <td>
          <button
            className="delete-quote-btn"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="select-quote-btn"
            onClick={[Function]}
          >
            Select
          </button>
        </td>
      </tr>
      <tr
        className="quote-row"
      >
        <td
          className="job-title"
        >
          J2
        </td>
        <td>
          <button
            className="delete-quote-btn"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="select-quote-btn"
            onClick={[Function]}
          >
            Select
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`quote list renders correctly 1`] = `
<div>
  <h3>
    Quotes 
    3
  </h3>
  <table
    className="table"
  >
    <tbody>
      <tr>
        <td>
          <input
            className="job-title-fld"
            onChange={[Function]}
            value="J2"
          />
          <button
            className="create-quote-btn"
          >
            Add
          </button>
          <button
            className="update-quote-btn"
          >
            Update
          </button>
        </td>
      </tr>
      <tr
        className="quote-row"
      >
        <td
          className="job-title"
        >
          J2
        </td>
        <td>
          <button
            className="delete-quote-btn"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="select-quote-btn"
            onClick={[Function]}
          >
            Select
          </button>
        </td>
      </tr>
      <tr
        className="quote-row"
      >
        <td
          className="job-title"
        >
          J123-21
        </td>
        <td>
          <button
            className="delete-quote-btn"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="select-quote-btn"
            onClick={[Function]}
          >
            Select
          </button>
        </td>
      </tr>
      <tr
        className="quote-row"
      >
        <td
          className="job-title"
        >
          J123-31
        </td>
        <td>
          <button
            className="delete-quote-btn"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="select-quote-btn"
            onClick={[Function]}
          >
            Select
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`render all quotes from services 1`] = `
<div>
  <h3>
    Quotes 
    3
  </h3>
  <table
    className="table"
  >
    <tbody>
      <tr>
        <td>
          <input
            className="job-title-fld"
            onChange={[Function]}
            value="J2"
          />
          <button
            className="create-quote-btn"
          >
            Add
          </button>
          <button
            className="update-quote-btn"
          >
            Update
          </button>
        </td>
      </tr>
      <tr
        className="quote-row"
      >
        <td
          className="job-title"
        >
          J2
        </td>
        <td>
          <button
            className="delete-quote-btn"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="select-quote-btn"
            onClick={[Function]}
          >
            Select
          </button>
        </td>
      </tr>
      <tr
        className="quote-row"
      >
        <td
          className="job-title"
        >
          J123-21
        </td>
        <td>
          <button
            className="delete-quote-btn"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="select-quote-btn"
            onClick={[Function]}
          >
            Select
          </button>
        </td>
      </tr>
      <tr
        className="quote-row"
      >
        <td
          className="job-title"
        >
          J123-31
        </td>
        <td>
          <button
            className="delete-quote-btn"
            onClick={[Function]}
          >
            Delete
          </button>
          <button
            className="select-quote-btn"
            onClick={[Function]}
          >
            Select
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
